# cardvault

./: .gitignore  DESIGN.md  README.md
go/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  handlers.go  main.go  models.go  store.go
go/static/: app.js
python/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt  store.py
python/static/: index.html
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
rust/src/: handlers.rs  main.rs  models.rs  store.rs
rust/src/static/: index.html  styles.css
