[project]
name = "cardvault"
version = "0.1.0"
description = "CardVault — business card manager (Python/FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]
