[package]
name = "cardvault"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cardvault"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
